--- a/cmd/registry/config-example.yml
+++ b/cmd/registry/config-example.yml
@@ -1,5 +1,6 @@
 version: 0.1
 log:
+  level: debug
   fields:
     service: registry
 storage:
@@ -11,8 +12,3 @@ http:
   addr: :5000
   headers:
     X-Content-Type-Options: [nosniff]
-health:
-  storagedriver:
-    enabled: true
-    interval: 10s
-    threshold: 3
